locustio-slaves.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: locustio-slave
  namespace: monitoring
spec:
  replicas: 20
  template:
    metadata:
      labels:
        app: locustio-slave
    spec:
      # Deploy to specify node pools
      # nodeSelector:
      #  cloud.google.com/gke-nodepool: default-pool  
      containers:
      - name: locustio-slave
        image: thaddeusct/locustio
        ports:
        - containerPort: 8089
        command: ["/usr/bin/locust", "-f", "/locust/locust_file.py", "--slave", "--master-host=locustio-master-service.monitoring.svc.cluster.local", "--host=$(LOCUST_TARGET_URL)"]
        volumeMounts:
        - mountPath: /locust/locust_file.py
          name: locustio-file
          subPath: locust_file.py
      volumes:
      - name: locustio-file
        configMap:
            name: locustio-file
